comments for python

--- a/website/application/templates/history.html
+++ b/website/application/templates/history.html
@@ -10,7 +10,7 @@
     <div class="col"><hr></div>
 </div>
 <div class="container">
-    <div class="overflow-auto" class="msgs" id="messages" style="overflow-y: scroll; height:500px;">
+    <div class="overflow-auto" class="msgs" id="messagesHistory" style="overflow-y: scroll; height:500px;">
         {% for msg in history %}
             <div class="container darker"><b style="color:#000" class="left">{{msg["name"]}}</b><p> {{msg["message"]}}</p><span class="time-left">{{msg["time"]}}</span></div>
         {% endfor %}
