--- a/website/application/templates/base.html
+++ b/website/application/templates/base.html
@@ -3,58 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <style type="text/css">
-            /* Chat containers */
-            .container {
-              border: 2px solid #dedede;
-              background-color: #f1f1f1;
-              border-radius: 5px;
-              padding: 10px;
-              margin: 10px 0;
-            }
-
-            /* Darker chat container */
-            .darker {
-              border-color: #ccc;
-              background-color: #ddd;
-            }
-
-            /* Clear floats */
-            .container::after {
-              content: "";
-              clear: both;
-              display: table;
-            }
-
-            /* Style images */
-            .container b {
-              float: left;
-              max-width: 60px;
-              width: 100%;
-              margin-right: 20px;
-              border-radius: 50%;
-            }
-
-            /* Style the right image */
-            .container b.right {
-              float: right;
-              margin-left: 20px;
-              margin-right:0;
-            }
-
-            /* Style time text */
-            .time-right {
-              float: right;
-              color: #aaa;
-            }
-
-            /* Style time text */
-            .time-left {
-              float: left;
-              color: #999;
-            }
-
-        </style>
+        <link href="{{ url_for('static', filename='chat_app.css') }}" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
